Reinvented a few things

--- a/index.html
+++ b/index.html
@@ -7,6 +7,86 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <div class="header">
+        <div class="header-top">
+            <div class="header-logo">Header Logo</div>
+            <ul>
+                <li><a href="#">Header link one</a></li>    
+                <li><a href="#">Header link two</a></li>
+                <li><a href="#">Header link three</a></li>
+            </ul>
+        </div>
+        <div class="header-body">
+            <div class="header-body-left">
+                <div class="header-body-left-title">This website is awesome!</div>
+                        <div class="header-body-left-subtext">This webstie has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>Sign up!</button>
+                </div>
+            </div>
+            <div class="header-body-right">
+                <div class="image-container">
+                    <img id="hb-image" src="./images/pexels-kai-pilger-996329.jpg" alt="Clothing">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="main-cards">
+        <h2>
+            Some random information.
+        </h2>
+        <div class="card">
+            <div class="card-image">
+                <img src="./images/1.jpg" alt="First picture">
+            </div>
+            this is some subtext under a illustration or image
+        </div>
+        <div class="card">
+            <div class="card-image">
+                <img src="./images/2.jpg" alt="Second picture">
+            </div>
+            this is some subtext under a illustration or image
+        </div>
+        <div class="card">
+            <div class="card-image">
+                <img src="./images/3.jpg" alt="Third picture">
+            </div>
+            this is some subtext under a illustration or image
+        </div>
+        <div class="card">
+            <div class="card-image">
+                <img src="./images/4.jpg" alt="Fourt picture">
+            </div>
+            this is some subtext under a illustration or image
+        </div>
+                <div class="card">
+            <div class="card-image">
+                <img src="./images/1.jpg" alt="First picture">
+            </div>
+            this is some subtext under a illustration or image
+        </div>
+    </div>
+    <div class="testimonial-box">
+        <div class="testimonial-quote">
+            This is an inspiring quote, or just a testimonial from a customer.
+            Maybe it's just filling up space, or maybe people will actually read it.
+            Who knows? All I know is that it looks nice.
+        </div>
+        <div class="testimonial-author">
+            -Thor, God of Thunder
+        </div>
+    </div>
+    <div class="bottom-container">
+        <div class="bottom-container-main">
+            <h3 id="title">Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there</p>
+            <div class="sign-button">
+                Sign up
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        Copyright &copy; The Odin Project 2024
+    </div>
     
 </body>
 </html>
