Fixed divs in header

--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
         <div class="header-body">
             <div class="header-body-left">
                 <div class="header-body-left-title">This website is awesome!</div>
-                        <div class="header-body-left-subtext">This webstie has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-                <button>Sign up!</button>
-                </div>
+                <div class="header-body-left-subtext">This webstie has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <button>
+                    Sign up!
+                </button>
             </div>
             <div class="header-body-right">
-                <div class="image-container">
-                    <img id="hb-image" src="./images/pexels-kai-pilger-996329.jpg" alt="Clothing">
-                </div>
+                <img src="./images/pexels-kai-pilger-996329.jpg" alt="Clothing">
             </div>
         </div>
     </div>
@@ -34,36 +33,8 @@
         <h2>
             Some random information.
         </h2>
-        <div class="card">
-            <div class="card-image">
-                <img src="./images/1.jpg" alt="First picture">
-            </div>
-            this is some subtext under a illustration or image
-        </div>
-        <div class="card">
-            <div class="card-image">
-                <img src="./images/2.jpg" alt="Second picture">
-            </div>
-            this is some subtext under a illustration or image
-        </div>
-        <div class="card">
-            <div class="card-image">
-                <img src="./images/3.jpg" alt="Third picture">
-            </div>
-            this is some subtext under a illustration or image
-        </div>
-        <div class="card">
-            <div class="card-image">
-                <img src="./images/4.jpg" alt="Fourt picture">
-            </div>
-            this is some subtext under a illustration or image
-        </div>
-                <div class="card">
-            <div class="card-image">
-                <img src="./images/1.jpg" alt="First picture">
-            </div>
-            this is some subtext under a illustration or image
-        </div>
+        
+        -- >
     </div>
     <div class="testimonial-box">
         <div class="testimonial-quote">
