Created Call to action section // Nested text into new div to make use of the <span> and it's newline.

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         </div>
     </div>
     <div class="bottom-container">
-        <div class="bottom-container-main">
-            <h3 id="title">Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there</p>
-            <div class="sign-button">
-                Sign up
+        <div class="container-text">
+            <div>
+                <h3 id="title">Call to action! It's time!</h3>
+                <span>Sign up for our product by clicking that button right over there</span>
             </div>
+            <button class="container-btn">Sign up</button>
         </div>
     </div>
     <div class="footer">
